# evalsmith

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OPEN_SOURCE_NOTICE.txt  README.md  README_CN.md  SECURITY.md  slides-server.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: open-source-check.yml
deploy/: docker-compose.dev.yml  docker-compose.trial.yml
deploy/env/: trial.env.example
deploy/k8s/: build-and-push.sh  deploy-verification-agent.sh  deploy.sh  install-ingress-nginx.sh
docs/api/: evalsmith-public.openapi.yaml
docs/deployment/: README.md
docs/maintenance/: GITHUB_MAINTENANCE_CN.md  REPOSITORY_STANDARDS_CN.md
docs/usage/: README.md  (+1 more)
gateway/: Dockerfile  nginx.conf  nginx.prod.conf
scripts/: build_screenshot_apng.py  capture_ui_screenshots.mjs  docker-go-mod-download.sh  doctor.sh  install-check.sh  migrate_dev_stack.py  open_source_guard.py  run_llm_regression.py  run_test_env_e2e.py  seed_demo_user.py  verify_test_env_ui.mjs
sdks/python/: pyproject.toml
sdks/python/evalsmith/: __init__.py  client.py  decorators.py  evaluate.py  otel.py  testing.py  trace.py
sdks/python/tests/: test_evaluate.py
services/monitor-service/: Dockerfile  pyproject.toml
services/monitor-service/app/: db.py  main.py  responses.py  schemas.py  service.py  settings.py
services/monitor-service/app/tests/: test_auth_and_routes.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+210 files in other folders)
