[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalsmith-sdk"
version = "0.1.0"
description = "Python SDK for EvalSmith - AI Agent evaluation platform"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["evalsmith"]
